design: 자원관리 디자인 수정

--- a/module-admin/src/main/resources/templates/resourcesView.html
+++ b/module-admin/src/main/resources/templates/resourcesView.html
@@ -4,164 +4,153 @@
       layout:decorate="~{layout/main}">
 
 <div layout:fragment="content" class="page-body">
-    <div class="page-body">
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <ul>
-                        <li class="d-inline-block m-r-10">
-                            디렉토리 : <i class="icofont  icofont-folder"></i>
-                        </li>
-                        <li class="d-inline-block m-r-10">
-                            메뉴 : <i class="icofont icofont-file-alt"></i>
-                        </li>
-                        <li class="d-inline-block m-r-10">
-                            상세 메뉴 : <i class="icofont icofont-copy-black"></i>
-                        </li>
-                        <li class="d-inline-block m-r-10">
-                            기능 : <i class="icofont icofont-tools-alt-2"></i>
-                        </li>
-                    </ul>
-                </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <ul>
+                    <li class="d-inline-block m-r-10">
+                        디렉토리 : <i class="icofont  icofont-folder"></i>
+                    </li>
+                    <li class="d-inline-block m-r-10">
+                        메뉴 : <i class="icofont icofont-file-alt"></i>
+                    </li>
+                    <li class="d-inline-block m-r-10">
+                        상세 메뉴 : <i class="icofont icofont-copy-black"></i>
+                    </li>
+                    <li class="d-inline-block m-r-10">
+                        기능 : <i class="icofont icofont-tools-alt-2"></i>
+                    </li>
+                </ul>
             </div>
+        </div>
 
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-block-small">
-                        <div class="tab-content tabs p-t-20">
-                            <div class="tab-pane active" id="roleJudge" role="tabpanel">
-                                <div class="row">
-                                    <div class="col-12 col-xl-4">
-                                        <h5 class="mb-3">
-                                            <strong>자원구조</strong>
-                                        </h5>
-                                        <div class="card">
-                                            <div class="card-block-small tree-view">
-                                                <div id="jstree"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-12 col-xl-8">
-                                        <h5 class="mb-3">
-                                            <strong>자원 상세정보</strong>
-                                        </h5>
-                                        <form id="resourceForm" name="resourceForm">
-                                            <input type="hidden" name="id" id="id"/>
-                                            <input type="hidden" name="ord" id="ord">
-                                            <input type="hidden" name="depth" id="depth">
-                                            <input type="hidden" name="upperId" id="upperId"/>
-
-                                            <div class="card">
-                                                <div class="card-block-small">
-                                                    <div class="mb-3 form-group row">
-                                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="upperName"><strong>상위자원명</strong></label>
-                                                        <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-round" name="upperName" id="upperName" readonly/>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-3 form-group row">
-                                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="upperUrl"><strong>상위 자원 URL</strong></label>
-                                                        <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-round" name="upperUrl" id="upperUrl" readonly/>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-3 form-group row required">
-                                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="httpMethod"><strong>Http Method Type</strong></label>
-                                                        <div class="col-sm-12">
-                                                            <select name="httpMethod" id="httpMethod" class="form-select form-control form-control-round">
-                                                                <option value="">- 선택 -</option>
-                                                                <option value="PUT">PUT</option>
-                                                                <option value="GET">GET</option>
-                                                                <option value="POST">POST</option>
-                                                                <option value="DELETE">DELETE</option>
-                                                                <option value="PATCH">PATCH</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-3 form-group row required">
-                                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="name"><strong>자원명</strong></label>
-                                                        <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-round" name="name" id="name"/>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-3 form-group row required">
-                                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="url"><strong>URL</strong></label>
-                                                        <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-round" name="url" id="url"/>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-3 form-group row required">
-                                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="styleClass"><strong>Style Class</strong></label>
-                                                        <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-round" name="styleClass" id="styleClass"/>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-3 form-group row required">
-                                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="type1"><strong>자원 유형 (메뉴 / 기능) </strong></label>
-                                                        <div class="form-radio">
-                                                            <div class="radio radio-inline">
-                                                                <label class="mb-0">
-                                                                    <input type="radio" id="type3" name="type" value="DIRECTORY">
-                                                                    <i class="helper"></i>디렉토리
-                                                                </label>
-                                                            </div>
-
-                                                            <div class="radio radio-inline">
-                                                                <label class="mb-0">
-                                                                    <input type="radio" id="type1" name="type" value="MENU">
-                                                                    <i class="helper"></i>메뉴
-                                                                </label>
-                                                            </div>
-
-                                                            <div class="radio radio-inline">
-                                                                <label class="mb-0">
-                                                                    <input type="radio" id="type4" name="type" value="DETAIL_MENU">
-                                                                    <i class="helper"></i>상세 메뉴
-                                                                </label>
-                                                            </div>
-
-                                                            <div class="radio radio-inline">
-                                                                <label class="mb-0">
-                                                                    <input type="radio" id=type2 name="type" value="FUNCTION">
-                                                                    <i class="helper"></i>기능
-                                                                </label>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-3 form-group row">
-                                                        <div class="col-sm-12">
-                                                            <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled" checked/>
-                                                            <label for="isEnabled" class="v-middle">사용여부</label>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="mb-0 mt-4 form-group row">
-                                                        <div class="col-sm-12">
-                                                            <button type="button" class="btn btn-primary" id="saveBtn">
-                                                                저장
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+        <div class="col-12 col-lg-6">
+            <div class="card">
+                <div class="card-header p-b-0">
+                    <h4 class="sub-title"><strong>자원구조</strong></h4>
+                </div>
+                <div class="card-block-small">
+                    <div class="col-12">
+                        <div id="jstree"></div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="col-12 col-lg-6">
+            <div class="card">
+                <div class="card-header p-b-0">
+                    <h4 class="sub-title"><strong>자원구조</strong></h4>
+                </div>
+                <div class="card-block-small">
+                    <form id="resourceForm" name="resourceForm">
+                        <input type="hidden" name="id" id="id"/>
+                        <input type="hidden" name="ord" id="ord">
+                        <input type="hidden" name="depth" id="depth">
+                        <input type="hidden" name="upperId" id="upperId"/>
+
+                        <div class="mb-3 form-group row">
+                            <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="upperName"><strong>상위자원명</strong></label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control form-control-round" name="upperName" id="upperName" readonly/>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 form-group row">
+                            <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="upperUrl"><strong>상위 자원 URL</strong></label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control form-control-round" name="upperUrl" id="upperUrl" readonly/>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 form-group row required">
+                            <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="httpMethod"><strong>Http Method Type</strong></label>
+                            <div class="col-sm-12">
+                                <select name="httpMethod" id="httpMethod" class="form-select form-control form-control-round">
+                                    <option value="">- 선택 -</option>
+                                    <option value="PUT">PUT</option>
+                                    <option value="GET">GET</option>
+                                    <option value="POST">POST</option>
+                                    <option value="DELETE">DELETE</option>
+                                    <option value="PATCH">PATCH</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 form-group row required">
+                            <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="name"><strong>자원명</strong></label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control form-control-round" name="name" id="name"/>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 form-group row required">
+                            <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="url"><strong>URL</strong></label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control form-control-round" name="url" id="url"/>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 form-group row required">
+                            <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="styleClass"><strong>Style Class</strong></label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control form-control-round" name="styleClass" id="styleClass"/>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 form-group row required">
+                            <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="type1"><strong>자원 유형 (메뉴 / 기능) </strong></label>
+                            <div class="form-radio">
+                                <div class="radio radio-inline">
+                                    <label class="mb-0">
+                                        <input type="radio" id="type3" name="type" value="DIRECTORY">
+                                        <i class="helper"></i>디렉토리
+                                    </label>
+                                </div>
+
+                                <div class="radio radio-inline">
+                                    <label class="mb-0">
+                                        <input type="radio" id="type1" name="type" value="MENU">
+                                        <i class="helper"></i>메뉴
+                                    </label>
+                                </div>
+
+                                <div class="radio radio-inline">
+                                    <label class="mb-0">
+                                        <input type="radio" id="type4" name="type" value="DETAIL_MENU">
+                                        <i class="helper"></i>상세 메뉴
+                                    </label>
+                                </div>
+
+                                <div class="radio radio-inline">
+                                    <label class="mb-0">
+                                        <input type="radio" id=type2 name="type" value="FUNCTION">
+                                        <i class="helper"></i>기능
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 form-group row">
+                            <div class="col-sm-12">
+                                <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled" checked/>
+                                <label for="isEnabled" class="v-middle">사용여부</label>
+                            </div>
+                        </div>
+
+                        <div class="mb-0 mt-4 form-group row">
+                            <div class="col-sm-12">
+                                <button type="button" class="btn btn-primary" id="saveBtn">
+                                    저장
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <link rel="stylesheet" type="text/css" th:href="@{/files/assets/pages/treeview/treeview.css}"></link>
     <script type="text/javascript" src="/files/bower_components/jstree/dist/jstree.js"></script>
