refactor : 새식관리, 새식소식, 문의하기 메뉴 select시 focus 이동하게 변경

--- a/module-admin/src/main/resources/templates/inquiry/inquiryList.html
+++ b/module-admin/src/main/resources/templates/inquiry/inquiryList.html
@@ -164,6 +164,8 @@
                         dataType: 'html'
                     }).done(function (response) {
                         $('#contentPanel').html(response);
+                        let offset = $("#contentPanel").offset(); //해당 위치 반환
+                        $("html, body").animate({scrollTop: offset.top - 80},400);
                         $.ajax({
                             type: "post",
                             async: false,
